--- a/src/app/posts/posts.component.css
+++ b/src/app/posts/posts.component.css
@@ -2,10 +2,6 @@ span{
     color:blue
 }
 
-.subcard{
-    font-size: small;
-}
-
 .bg-custom {
-    background-color: #bfc7c5; /* Replace with your desired background color */
+    background-color: #bfc7c5; 
   }
