--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -9,9 +9,9 @@
                     {{post.body}}
                 </p>
                 <div class="justify-content-end">
-                    <h5> author : <span>{{post.user.name}} </span> </h5>
-                    <h5> website : <span>{{post.user.website}} </span></h5>
-                    <h5> website : <span>{{post.user.email}} </span></h5>
+                    <h5> Author : <span>{{post.user.name}} </span> </h5>
+                    <h5> Website : <span>{{post.user.website}} </span></h5>
+                    <h5> Email : <span>{{post.user.email}} </span></h5>
                     <button type="button" class="btn btn-default btn-sm btn-label" (click)="post.show=!post.show">
                            <span *ngIf="!post.show">Show Comments</span>   <span *ngIf="post.show">Hide Comments</span>  
                     </button>
